selfhost/test/parser/decorator_error_before_expr.out
Error at %FILE_NAME%:2:1
Unexpected token 'identifier', expected one of 'val', 'var', 'func', '@':
  |  abc()
     ^